--- a/index.ipynb
+++ b/index.ipynb
@@ -159,7 +159,8 @@
    ],
    "source": [
     "print(is_even(3)) # False\n",
-    "print(is_even(100)) # True"
+    "print(is_even(100)) # True\n",
+    "is_e"
    ]
   },
   {
